--- a/ressource/ETL/script.ipynb
+++ b/ressource/ETL/script.ipynb
@@ -2710,7 +2710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dfe133ec-12fa-4264-97dd-5d7e2a150e02",
    "metadata": {},
    "outputs": [],
@@ -2903,6 +2903,272 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "52340381-ae46-4dcf-a42c-287fb4e88f91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5267,)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe[\"InvoiceNo\"].unique().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ee653a9d-38c4-4fb2-9a33-593cfa2e70b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(dataframe[\"InvoiceNo\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b5f33d46-4118-44cc-b2ff-e490c8f455ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>543162</td>\n",
+       "      <td>82578</td>\n",
+       "      <td>KITCHEN METAL SIGN</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2/3/2011 18:08</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>17507.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>543805</td>\n",
+       "      <td>21382</td>\n",
+       "      <td>SET/4 SPRING FLOWER DECORATION</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2/13/2011 12:41</td>\n",
+       "      <td>2.95</td>\n",
+       "      <td>17050.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>556829</td>\n",
+       "      <td>23264</td>\n",
+       "      <td>SET OF 3 WOODEN SLEIGH DECORATIONS</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6/15/2011 10:51</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>12809.0</td>\n",
+       "      <td>Portugal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>551998</td>\n",
+       "      <td>85150</td>\n",
+       "      <td>LADIES &amp; GENTLEMEN METAL SIGN</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5/5/2011 15:48</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>14099.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>540824</td>\n",
+       "      <td>22423</td>\n",
+       "      <td>REGENCY CAKESTAND 3 TIER</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1/11/2011 13:31</td>\n",
+       "      <td>12.75</td>\n",
+       "      <td>12728.0</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12290</th>\n",
+       "      <td>544394</td>\n",
+       "      <td>22726</td>\n",
+       "      <td>ALARM CLOCK BAKELIKE GREEN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2/18/2011 12:02</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>13932.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12291</th>\n",
+       "      <td>547199</td>\n",
+       "      <td>21169</td>\n",
+       "      <td>YOU'RE CONFUSING ME METAL SIGN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3/21/2011 12:53</td>\n",
+       "      <td>1.69</td>\n",
+       "      <td>14606.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12292</th>\n",
+       "      <td>554980</td>\n",
+       "      <td>22274</td>\n",
+       "      <td>FELTCRAFT DOLL EMILY</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5/29/2011 11:59</td>\n",
+       "      <td>2.95</td>\n",
+       "      <td>17613.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12293</th>\n",
+       "      <td>544634</td>\n",
+       "      <td>22367</td>\n",
+       "      <td>CHILDRENS APRON SPACEBOY DESIGN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2/22/2011 11:02</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>17994.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12294</th>\n",
+       "      <td>539453</td>\n",
+       "      <td>22661</td>\n",
+       "      <td>CHARLOTTE BAG DOLLY GIRL DESIGN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12/17/2010 17:08</td>\n",
+       "      <td>1.66</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12295 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      InvoiceNo StockCode                         Description  Quantity  \\\n",
+       "0        543162     82578                  KITCHEN METAL SIGN        25   \n",
+       "1        543805     21382      SET/4 SPRING FLOWER DECORATION         4   \n",
+       "2        556829     23264  SET OF 3 WOODEN SLEIGH DECORATIONS        12   \n",
+       "3        551998     85150       LADIES & GENTLEMEN METAL SIGN        12   \n",
+       "4        540824     22423            REGENCY CAKESTAND 3 TIER         1   \n",
+       "...         ...       ...                                 ...       ...   \n",
+       "12290    544394     22726          ALARM CLOCK BAKELIKE GREEN         4   \n",
+       "12291    547199     21169     YOU'RE CONFUSING ME METAL SIGN          1   \n",
+       "12292    554980     22274                FELTCRAFT DOLL EMILY         1   \n",
+       "12293    544634     22367     CHILDRENS APRON SPACEBOY DESIGN         2   \n",
+       "12294    539453     22661     CHARLOTTE BAG DOLLY GIRL DESIGN         1   \n",
+       "\n",
+       "            InvoiceDate  UnitPrice  CustomerID         Country  \n",
+       "0        2/3/2011 18:08       0.55     17507.0  United Kingdom  \n",
+       "1       2/13/2011 12:41       2.95     17050.0  United Kingdom  \n",
+       "2       6/15/2011 10:51       1.25     12809.0        Portugal  \n",
+       "3        5/5/2011 15:48       2.55     14099.0  United Kingdom  \n",
+       "4       1/11/2011 13:31      12.75     12728.0          France  \n",
+       "...                 ...        ...         ...             ...  \n",
+       "12290   2/18/2011 12:02       3.75     13932.0  United Kingdom  \n",
+       "12291   3/21/2011 12:53       1.69     14606.0  United Kingdom  \n",
+       "12292   5/29/2011 11:59       2.95     17613.0  United Kingdom  \n",
+       "12293   2/22/2011 11:02       1.95     17994.0  United Kingdom  \n",
+       "12294  12/17/2010 17:08       1.66         NaN  United Kingdom  \n",
+       "\n",
+       "[12295 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe[dataframe[\"InvoiceNo\"].isin(dataframe[\"InvoiceNo\"].unique())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "84547e94-0be8-4e83-8c79-2524e936f45e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12295, 8)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3098fd67-07ac-4597-9a88-579ea01177f5",
    "metadata": {},
@@ -3073,7 +3339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
