--- a/ressource/brouillon/Untitled.ipynb
+++ b/ressource/brouillon/Untitled.ipynb
@@ -3187,9 +3187,320 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "5460e380-aa45-4d58-bf86-fc7bf3f1f8e3",
+   "metadata": {},
+   "source": [
+    "## InvoiceNo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "df9ad7e2-3df4-45b6-977e-4a5caa98ee4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "dataframe = pd.read_csv('../data/rData.csv', encoding=\"unicode_escape\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7866fc57-116e-482d-ac81-982724ae0bc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5267"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = dataframe[\"InvoiceNo\"].unique()\n",
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "52072bdb-70f4-4d14-b8bb-c29ebc9b3bca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = ~dataframe.duplicated(subset = [\"InvoiceNo\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9365cb27-4ab1-48c3-b9ce-525b868d7e49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>543162</td>\n",
+       "      <td>2/3/2011 18:08</td>\n",
+       "      <td>17507.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>543805</td>\n",
+       "      <td>2/13/2011 12:41</td>\n",
+       "      <td>17050.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>556829</td>\n",
+       "      <td>6/15/2011 10:51</td>\n",
+       "      <td>12809.0</td>\n",
+       "      <td>Portugal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>551998</td>\n",
+       "      <td>5/5/2011 15:48</td>\n",
+       "      <td>14099.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>540824</td>\n",
+       "      <td>1/11/2011 13:31</td>\n",
+       "      <td>12728.0</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12256</th>\n",
+       "      <td>549851</td>\n",
+       "      <td>4/12/2011 15:08</td>\n",
+       "      <td>16062.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12259</th>\n",
+       "      <td>549755</td>\n",
+       "      <td>4/12/2011 11:34</td>\n",
+       "      <td>16843.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12265</th>\n",
+       "      <td>555918</td>\n",
+       "      <td>6/7/2011 16:21</td>\n",
+       "      <td>16098.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12269</th>\n",
+       "      <td>547897</td>\n",
+       "      <td>3/28/2011 11:36</td>\n",
+       "      <td>12792.0</td>\n",
+       "      <td>Portugal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12277</th>\n",
+       "      <td>547810</td>\n",
+       "      <td>3/25/2011 14:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5267 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      InvoiceNo      InvoiceDate  CustomerID         Country\n",
+       "0        543162   2/3/2011 18:08     17507.0  United Kingdom\n",
+       "1        543805  2/13/2011 12:41     17050.0  United Kingdom\n",
+       "2        556829  6/15/2011 10:51     12809.0        Portugal\n",
+       "3        551998   5/5/2011 15:48     14099.0  United Kingdom\n",
+       "4        540824  1/11/2011 13:31     12728.0          France\n",
+       "...         ...              ...         ...             ...\n",
+       "12256    549851  4/12/2011 15:08     16062.0  United Kingdom\n",
+       "12259    549755  4/12/2011 11:34     16843.0  United Kingdom\n",
+       "12265    555918   6/7/2011 16:21     16098.0  United Kingdom\n",
+       "12269    547897  3/28/2011 11:36     12792.0        Portugal\n",
+       "12277    547810  3/25/2011 14:00         NaN  United Kingdom\n",
+       "\n",
+       "[5267 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe[b][[\"InvoiceNo\", \"InvoiceDate\", \"CustomerID\", \"Country\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "578c6fd3-67ba-4106-8a49-753e0f046488",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>543162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>543805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>556829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>551998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>France</td>\n",
+       "      <td>540824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12290</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>544394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12291</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>547199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12292</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>554980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12293</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>544634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12294</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>539453</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12295 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Country InvoiceNo\n",
+       "0      United Kingdom    543162\n",
+       "1      United Kingdom    543805\n",
+       "2            Portugal    556829\n",
+       "3      United Kingdom    551998\n",
+       "4              France    540824\n",
+       "...               ...       ...\n",
+       "12290  United Kingdom    544394\n",
+       "12291  United Kingdom    547199\n",
+       "12292  United Kingdom    554980\n",
+       "12293  United Kingdom    544634\n",
+       "12294  United Kingdom    539453\n",
+       "\n",
+       "[12295 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe[[\"Country\", \"InvoiceNo\"]]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "862407ec-faf6-4f50-b96a-d5b617001f23",
+   "id": "d444d0c7-f41b-4651-aee5-d15284006657",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3211,7 +3522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
