correction: sur l'ajout de nouveaux éléments dans la database + ajout de commentaire

--- a/ressource/ETL/script.ipynb
+++ b/ressource/ETL/script.ipynb
@@ -1861,7 +1861,6 @@
    "cell_type": "markdown",
    "id": "0cd13996-4a59-40bc-a357-a4f4ee32b9c4",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1935,7 +1934,61 @@
     }
    ],
    "source": [
-    "cdf[cdf['InvoiceDate'].str.match(date_pattern) == False].shape"
+    "cdf[cdf['InvoiceDate']str.match(date_pattern) == False].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f3caf406-56fa-4fdc-84ef-e2733a0f60a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('../data/data2010-2011s1.csv', encoding=\"unicode_escape\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "cc0e7fbb-efef-432d-9e81-4eb5ed2d02c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         False\n",
+       "1         False\n",
+       "2         False\n",
+       "3         False\n",
+       "4         False\n",
+       "          ...  \n",
+       "245898    False\n",
+       "245899    False\n",
+       "245900    False\n",
+       "245901    False\n",
+       "245902    False\n",
+       "Name: InvoiceDate, Length: 245903, dtype: bool"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date_pattern = \"(\\d{1,2})/(\\d{4})\"\n",
+    "df[\"InvoiceDate\"].str.match(date_pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "3d0bc564-a5db-48f8-9380-82d9d6bce185",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(data=[\"12/1/2010 8:26\", \"12/3/2010 8:28\", \"12/6/2010 8:28\", \"02/15/2011 8:34\", \"02/18/2011 8:34\", \"03/01/2011 8:34\"], columns=[\"_Date\"])"
    ]
   },
   {
@@ -2814,6 +2867,7 @@
    "cell_type": "markdown",
    "id": "a588a3dd-274c-495f-b980-ba54bcb0caa0",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2822,42 +2876,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "2993afac-de0a-4b62-8373-2082e56be096",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "dataframe = pd.read_csv('../data/rData.csv', encoding=\"unicode_escape\")"
+    "df = pd.read_csv('../data/data2010-2011s1.csv', encoding=\"unicode_escape\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "be455833-c2ac-43b3-83e9-6112076f2dd6",
-   "metadata": {},
+   "execution_count": 16,
+   "id": "3d6e4a06-f694-49ab-bc04-406deed9b52f",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'trimEnd'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_7356\\1495797613.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdataframe\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Description\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrimEnd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5573\u001b[0m         ):\n\u001b[0;32m   5574\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5575\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5576\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5577\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'trimEnd'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [InvoiceNo, StockCode, Description, Quantity, InvoiceDate, UnitPrice, CustomerID, Country]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataframe[\"Description\"].trimEnd()"
+    "dataframe[dataframe[\"Description\"].str.match(\"\\s$\")==True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2cc8d149-3bf0-445d-82e6-4b5627169f8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         c1\n",
+      "0  cdqzdzq \n",
+      "1      None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>c1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cdqzdzq</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        c1\n",
+       "0  cdqzdzq\n",
+       "1     None"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = pd.DataFrame(data=[\"cdqzdzq \", None], columns = [\"c1\"])\n",
+    "print(a)\n",
+    "a.replace('\\s$', '', regex=True, inplace=True)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "be455833-c2ac-43b3-83e9-6112076f2dd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe[\"Description\"].replace('\\s$', '', regex=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8922f8c3-e686-49cc-b2f2-24b578da9a63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                        KITCHEN METAL SIGN\n",
+       "1            SET/4 SPRING FLOWER DECORATION\n",
+       "2        SET OF 3 WOODEN SLEIGH DECORATIONS\n",
+       "3             LADIES & GENTLEMEN METAL SIGN\n",
+       "4                  REGENCY CAKESTAND 3 TIER\n",
+       "                        ...                \n",
+       "12290            ALARM CLOCK BAKELIKE GREEN\n",
+       "12291        YOU'RE CONFUSING ME METAL SIGN\n",
+       "12292                  FELTCRAFT DOLL EMILY\n",
+       "12293       CHILDRENS APRON SPACEBOY DESIGN\n",
+       "12294       CHARLOTTE BAG DOLLY GIRL DESIGN\n",
+       "Name: Description, Length: 12295, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe[\"Description\"]"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6bb95c94-69f7-4cba-9ea6-55df99438146",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3327,7 +3530,10 @@
   {
    "cell_type": "markdown",
    "id": "3098fd67-07ac-4597-9a88-579ea01177f5",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# InvoiceNo and InvoiceDate"
    ]
@@ -3375,7 +3581,10 @@
   {
    "cell_type": "markdown",
    "id": "34050b3e-b0b2-4e49-b904-7dcd3f88b7c6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# StockCode"
    ]
@@ -3453,7 +3662,10 @@
   {
    "cell_type": "markdown",
    "id": "857d5539-9395-4fed-a553-f42ab69fcab1",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# StockCode and Description"
    ]
